<resources>
    <string name="app_name">쉐어데이</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_helpMe">도와주세요</string>
    <string name="menu_helpYou">도와줄게요</string>
    <string name="menu_map">지도</string>
    <string name="menu_chat">채팅</string>
    <string name="menu_myPage">My</string>
    <string name="menu_personal">개인 나눔</string>
    <string name="menu_tog">공구 이벤트</string>
    <string name="title_activity_home_two">HomeTwoActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

</resources>